test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope1.good
requireNotAtModuleScope1.chpl:4: error: cannot use 'require' on a Chapel source file not at module scope
