test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope1.chpl

class C {
  proc foo() {
    require "dummyFile.chpl"; // should error
  }
}
